--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,24 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - SuperCubStatic",
+            "request": "launch",
+            "mainClass": "SuperCubStatic"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - MyBusinessMan2",
+            "request": "launch",
+            "mainClass": "MyBusinessMan2"
+        },
+        {
+            "type": "java",
+            "name": "CodeLens (Launch) - SuperSubCon",
+            "request": "launch",
+            "mainClass": "SuperSubCon"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - MyBusinessMan",
             "request": "launch",
             "mainClass": "MyBusinessMan"
